Remove unused dependencies and dependency on Guava; replace methods from Apache Commons libs with native JDK methods where possible